--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #fef9ef;
 }
 
@@ -21,4 +21,9 @@ p {
 
 .custom-img {
   background-image: url(https://images.unsplash.com/photo-1646312023696-aa27ca49602a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);
+}
+
+.yellow-stripe {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
